export enum ScheduleType {
  IN_PERSON = 'IN_PERSON',
  ONLINE = 'ONLINE',
  HOME = 'HOME',
}