import {
  Entity,
  PrimaryGeneratedColumn,
  Column,
  OneToOne,
  JoinColumn,
  OneToMany
} from 'typeorm';
import { User } from './user.entity';
import { DoctorSpecialty } from '../../specialties/entities/doctor-specialty.entity';

@Entity('doctor')
export class Doctor {
  @PrimaryGeneratedColumn()
  id!: number;

  @OneToOne(() => User, { cascade: true, eager: true, onDelete: 'CASCADE' })
  @JoinColumn()
  user!: User;

  @Column({ unique: true })
  crm!: string;
  
  @OneToMany(() => DoctorSpecialty, doctorSpecialty => doctorSpecialty.doctor, { cascade: true })
  specialties!: DoctorSpecialty[];

  // getActiveSchedules(): Schedules[] {}
  // getAppointments(): Appointments[]
}
